<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChartsFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />

    <TextView
        android:id="@+id/txt_statistics"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/friskily"
        android:text="@string/statistics"
        android:textColor="@color/white"
        android:textSize="18pt"
        app:layout_constraintEnd_toStartOf="@+id/gl_right"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/gl_left"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_statistics_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arial_rounded_bold"
        android:text="@string/statistics_subtitle"
        android:textColor="?attr/colorSecondaryVariant"
        android:textSize="10pt"
        app:layout_constraintEnd_toStartOf="@+id/gl_right"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/gl_left"
        app:layout_constraintTop_toBottomOf="@+id/txt_statistics" />

    <LinearLayout
        android:id="@+id/lay_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounded_corners"
        android:elevation="15dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/gl_right"
        app:layout_constraintStart_toStartOf="@+id/gl_left"
        app:layout_constraintTop_toBottomOf="@id/txt_statistics_subtitle">

        <TextView
            android:id="@+id/charts_depth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arial_rounded_bold"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/duration"
            android:textColor="?attr/colorPrimary"
            android:textSize="10pt" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:paddingVertical="10dp" />


        <com.google.android.material.divider.MaterialDivider
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arial_rounded_bold"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/statistics_highlights"
            android:textColor="?attr/colorPrimary"
            android:textSize="10pt" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:fontFamily="@font/arial_rounded_bold"
                    android:padding="5dp"
                    android:text="@string/statistics_mood"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="10pt" />

                <ImageView
                    android:id="@+id/charts_top_mood"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_neutral"
                    app:tint="@color/ic_yellow" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arial_rounded_bold"
                    android:gravity="start"
                    android:padding="5dp"
                    android:text="@string/statistics_happydays"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="10pt" />

                <TextView
                    android:id="@+id/charts_num_happy_days"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arial_rounded_bold"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/statistics_happydays_num"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="10pt" />
            </TableRow>

        </TableLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>