<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="0dp"
    app:cardBackgroundColor="@color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="30dp"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="30dp"
            />

        <LinearLayout
            android:id="@+id/item_lay_card"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/card_background_transparent"
            android:orientation="vertical"
            android:elevation="15dp"
            app:layout_constraintEnd_toStartOf="@+id/gl_right"
            app:layout_constraintStart_toStartOf="@+id/gl_left"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp">

            <LinearLayout
                android:id="@+id/item_mood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@drawable/rounded_corners_top"
                >
                <ImageView
                    android:id="@+id/item_mood_happy"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_happy"
                    app:tint="@color/ic_green"
                    android:layout_margin="10dp"
                    />
                <ImageView
                    android:id="@+id/item_mood_neutral"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_neutral"
                    app:tint="@color/ic_yellow"
                    android:layout_margin="10dp"
                    />
                <ImageView
                    android:id="@+id/item_mood_unhappy"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_unhappy"
                    app:tint="@color/ic_red"
                    android:layout_margin="10dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@drawable/rounded_corners_bottom"
                >
                <TextView
                    android:id="@+id/item_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:fontFamily="@font/arial_rounded_bold"
                    android:padding="10dp"
                    android:gravity="center"
                    android:textSize="9pt"
                    android:textColor="@color/brown"
                    />
                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/highlight_header"
                    android:fontFamily="@font/friskily"
                    android:padding="5dp"
                    android:gravity="center"
                    android:textSize="13pt"
                    android:textColor="@color/brown"
                    />
                <TextView
                    android:id="@+id/item_highlight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/highlight_text"
                    android:fontFamily="@font/arial_rounded_bold"
                    android:padding="10dp"
                    android:gravity="center"
                    android:textSize="11pt"
                    android:textColor="@color/dark_brown"
                    />
                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="20dp"
                    >
                    <TextView
                        android:id="@+id/item_freetext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/arial_rounded_bold"
                        android:scrollbars="vertical"
                        android:text="@string/lorem_ipsum"
                        android:textColor="@color/dark_brown"
                        android:textSize="9pt" />
                </ScrollView>
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>
