<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background">

    <LinearLayout
        android:id="@+id/lay_buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            app:cornerRadius="28dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:icon="@drawable/ic_settings"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="45dp"
            app:iconTint="@color/brown"
            app:backgroundTint="@color/light_brown"
            android:layout_margin="10dp" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            app:cornerRadius="28dp"
            android:id="@+id/btn_Account"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:icon="@drawable/ic_person"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="45dp"
            app:iconTint="@color/brown"
            app:backgroundTint="@color/light_brown"
            android:layout_margin="10dp" />
    </LinearLayout>
    
    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/bar_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="lay_buttons"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp"
        />

    <TextView
        android:id="@+id/txt_hello"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textSize="17pt"
        android:textColor="@color/white"
        android:fontFamily="@font/titan_one"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/gl_right"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/gl_left"
        app:layout_constraintTop_toBottomOf="@+id/bar_buttons" />

    <TextView
        android:id="@+id/txt_how_are_you"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/how_are_you"
        android:textSize="10pt"
        android:textColor="@color/light_brown"
        android:fontFamily="@font/arial_rounded_bold"
        app:layout_constraintEnd_toStartOf="@+id/gl_right"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/gl_left"
        app:layout_constraintTop_toBottomOf="@+id/txt_hello" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/bar_hellotext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="txt_how_are_you"
        />

    <LinearLayout
        android:id="@+id/lay_card"
        android:layout_width="0dp"
        android:layout_height="425dp"
        android:background="@drawable/card_background_transparent"
        android:orientation="vertical"
        android:elevation="30dp"
        app:layout_constraintEnd_toStartOf="@+id/gl_right"
        app:layout_constraintStart_toStartOf="@+id/gl_left"
        app:layout_constraintTop_toBottomOf="@+id/bar_hellotext"
        android:layout_marginTop="40dp">

        <LinearLayout
            android:id="@+id/lay_card_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/rounded_corners_top"
            >
            <ImageView
                android:id="@+id/ic_happy"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_happy"
                app:tint="#9CCA9E"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true"
                />
            <ImageView
                android:id="@+id/ic_neutral"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_neutral"
                app:tint="#FFCC81"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true"/>
            <ImageView
                android:id="@+id/ic_unhappy"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_unhappy"
                app:tint="#FF8686"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="345dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/rounded_corners_bottom"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:fontFamily="@font/arial_rounded_bold"
                android:padding="10dp"
                android:gravity="center"
                android:textSize="9pt"
                android:textColor="#C48C66"
                />
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lorem_ipsum"
                android:textSize="9pt"
                android:fontFamily="@font/arial_rounded_bold"
                android:padding="20dp"
                />
        </LinearLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_card_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="100dp"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/bottom_nav_gradient"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/bottom_nav_background"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/gl_card_bottom"
        >
        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            app:cornerRadius="28dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:icon="@drawable/ic_history"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="45dp"
            app:iconTint="@color/white"
            app:backgroundTint="@color/light_brown"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="25dp" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            app:cornerRadius="28dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:icon="@drawable/ic_home"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="45dp"
            app:iconTint="@color/white"
            app:backgroundTint="@color/brown"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="25dp" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            app:cornerRadius="28dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:icon="@drawable/ic_chart"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="45dp"
            app:iconTint="@color/white"
            app:backgroundTint="@color/light_brown"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="25dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>